log
Thu 09 May 2024 03:57:41 PM UTC: 
 treemap.c | 95 ++++++++++++++++++++++++++++++++++++++++++---------------------
 1 file changed, 63 insertions(+), 32 deletions(-)
 tests:  0|0
8c0227a
Thu 09 May 2024 03:59:14 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
738411b
Thu 09 May 2024 04:00:50 PM UTC: 
 treemap.c | 9 ---------
 1 file changed, 9 deletions(-)
 tests:  4|7
total_score: 5/70
641e2af
Thu 09 May 2024 04:02:27 PM UTC: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
6b3ac60
Thu 09 May 2024 04:03:56 PM UTC: 
 treemap.c | 66 +++++++++++++++++++++++++++++++++------------------------------
 1 file changed, 35 insertions(+), 31 deletions(-)
 tests:  6|6
total_score: 15/70
cab820c
Thu 09 May 2024 04:06:17 PM UTC: 
 treemap.c | 45 ++++++++++++++++++++-------------------------
 1 file changed, 20 insertions(+), 25 deletions(-)
 tests:  8|5
total_score: 15/70
613f280
Thu 09 May 2024 04:07:36 PM UTC: 
 treemap.c | 53 ++++++++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 52 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c:92:10: error: ‘removeNode’ defined but not used [-Werror=unused-function]
   92 |     void removeNode(TreeMap *tree, TreeNode *node) {
      |          ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
4e728b5
Thu 09 May 2024 04:08:02 PM UTC: 
 treemap.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  8|5
total_score: 15/70
def7186
Thu 09 May 2024 04:12:24 PM UTC: 
 treemap.c | 64 +++++++++++++++------------------------------------------------
 1 file changed, 15 insertions(+), 49 deletions(-)
 tests:  15|4
total_score: 25/70
79fe229
Thu 09 May 2024 04:14:40 PM UTC: 
 treemap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  17|3
total_score: 30/70
9332435
